# cutlist-web

./: .firebaserc  .gitignore  README.md  dev.sh  firebase.json  package.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: blocks.py  config.py  main.py
backend/app/services/: gemini_service.py  test_service.py
backend/blocks/: goki_block_1.STL  goki_block_1.step  goki_block_2.STL  goki_block_2.step  goki_block_3.STL  goki_block_3.step  goki_block_4.STL  goki_block_4.step  goki_block_5.STL  goki_block_5.step  goki_block_6.STL  goki_block_6.step  goki_block_7.STL  goki_block_7.step  goki_block_8.STL  goki_block_8.step
backend/config/: parts_library.json  qa_system_prompt.txt  system_prompt.txt
backend/stl_files/: model_2917fd4c.stl  model_54ebcaad.stl  model_83b44654.stl
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: index.css
frontend/src/components/: ActionsPanel.css  ActionsPanel.tsx  ChatWindow.css  ChatWindow.tsx  CodePanel.css  CodePanel.tsx  StlViewer.tsx  TestResultsPanel.css  TestResultsPanel.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
